fix(general): fix navbar width and brand cursor

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yurirech.github.io/yr-world/"
+  "homepage": "https://yurirech.github.io/yr-world/",
   "name": "yr-world",
   "version": "0.1.0",
   "private": true,
